# controllers/movieController.js
@@ -5,11 +5,11 @@ function getAllMovies(req, res) {
     const page = parseInt(req.query.page) || 1;
     const limit = parseInt(req.query.limit) || 10;
 
-    const params = { page, limit };
+    const params = { page, limit, displayPrivates: false };
 
     const movies = MovieProxy.getAll(params);
     const enricheds = attachLinks('movies', movies, req.baseUrl, 1);
-    
+
     res.json(enricheds);
 }
 
@@ -27,7 +27,7 @@ function getMovieById(req, res) {
 }
 
 function addMovie(req, res) {
-    const { title, author } = req.body;
+    const { title, author, private = false } = req.body;
 
     if (!title || !author) {
         return res.status(400).json({ message: "Titre et auteur sont requis." });
@@ -44,8 +44,8 @@ function addMovie(req, res) {
     title = title.trim()
     author = author.trim()
 
-    const newMovie = MovieProxy.add(title, author);
-    
+    const newMovie = MovieProxy.add(title, author, private);
+
     const enriched = attachLinks('movies', newMovie, req.baseUrl, 1);
 
     res.status(201).json(enriched);
@@ -53,7 +53,7 @@ function addMovie(req, res) {
 
 function updateMovie(req, res) {
     const id = parseInt(req.params.id);
-    const { title, author } = req.body;
+    const { title, author, private = false } = req.body;
 
     if (!title || !author) {
         return res.status(400).json({ message: "Titre et auteur sont requis." });
@@ -70,7 +70,7 @@ function updateMovie(req, res) {
     title = title.trim()
     author = author.trim()
 
-    const updated = MovieProxy.update(id, title, author);
+    const updated = MovieProxy.update(id, title, author, private);
 
     if (!updated) {
         return res.status(404).json({ message: "Livre non trouvé" });
